--- a/_config.yml
+++ b/_config.yml
@@ -13,38 +13,39 @@ header:
   pages:
     - name: Home
       slug: /
-    - name: Work
+    - name: Publications
     - name: Blog
+    - name: Life
 
 footer:
   show_powered_by: true
   contact:
     - type: email
       name: Email
-      value: yourmail@domain.com
-    - type: wechat
-      value: YourWeChatUsername
-      link: "#"
+      value: fengx_hit@outlook.com
+    #- type: wechat
+    #  value: YourWeChatUsername
+    #  link: "#"
   follow:
     - type: twitter
       name: Twitter
-      link: http://twitter.com/YourTwitterUsername
+      link: https://x.com/FengxHit
       username: "@YourTwitterUsername"
-    - type: facebook
-      name: Facebook
-      link: http://facebook.com/YourFacebookUsername
-    - type: linkedin
-      name: LinkedIn
-      link: http://linkedin.com/in/YourLinkedInUsername
+    #- type: facebook
+    #  name: Facebook
+    #  link: http://facebook.com/YourFacebookUsername
+    #- type: linkedin
+    #  name: LinkedIn
+    #  link: http://linkedin.com/in/YourLinkedInUsername
     - type: github
       name: GitHub
-      link: http://github.com/YourGitHubUsername
-    - type: dribbble
-      name: Dribbble
-      link: https://dribbble.com/YourDribbbleUsername
-    - type: rss
-      name: RSS
-      link: /feed.xml
+      link: https://github.com/funkdub
+    #- type: dribbble
+    #  name: Dribbble
+    #  link: https://dribbble.com/YourDribbbleUsername
+    #- type: rss
+    #  name: RSS
+    #  link: /feed.xml
 
 # Build settings
 markdown: kramdown
