--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 
 title: Xin Feng's Homepage
 description: >- # this means to ignore newlines until "baseurl:"
-  Bay is a minimal Jekyll Theme.
-baseurl: "/bay" # the subpath of the site
-url: "https://eliottvincent.github.io" # the base hostname & protocol for the site
+  Xin Feng's personal academic homepage.
+baseurl: "" # the subpath of the site
+url: "https://funkdub.github.io/fengx.github.io/" # the base hostname & protocol for the site
 og_image: /assets/img/profile.jpg
-google_analytics: "UA-121636368-3"
+google_analytics: ""
 
 header:
   pages:
