--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer:
       name: Email
       value: fengx_hit@outlook.com
     - type: keybase
-      value: google scholar
+      value: Google scholar
       link: "https://scholar.google.com/citations?user=dkfbz90AAAAJ&hl=en"
   follow:
     - type: twitter
