--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Xin Feng's personal academic homepage.
 baseurl: "" # the subpath of the site
 url: "https://funkdub.github.io/fengx.github.io/" # the base hostname & protocol for the site
-og_image: /assets/img/profile.jpg
+og_image: /assets/img/self.jpg
 google_analytics: ""
 
 header:
